# comparative_photo_sort

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
src/: sorting.py
tests/: test_sorter.py
